# mcpscope

./: .gitignore  PLAN.md  README.md  pyproject.toml
scripts/: demo.tape  demo_driver.py  verify_http_real.py
src/mcpscope/: __init__.py  __main__.py  cli.py
src/mcpscope/attach/: claude_desktop.py
src/mcpscope/proxy/: frames.py  http.py  stdio.py
src/mcpscope/store/: schema.py  writer.py
src/mcpscope/tui/: app.py
tests/: conftest.py  fake_server.py  test_attach.py  test_frames.py  test_http_proxy.py  test_stdio_proxy.py  test_store.py  test_tui.py
